@@ -2822,7 +2822,17 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item row="1" column="1">
+        <widget class="QPushButton" name="menubarBlend">
+         <property name="text">
+          <string>Blend with titlebar</string>
+         </property>
+         <property name="whatsThis">
+          <string>Sets the relevant config items, so that window titlebars and menubars are blended..</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
         <widget class="QLabel" name="textLabel1_4_2_5">
          <property name="text">
           <string>Coloration:</string>
@@ -2832,14 +2842,14 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="2" column="1">
         <widget class="QComboBox" name="shadeMenubars">
          <property name="whatsThis">
           <string>Defines the color applied to the background of menubars.</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
+       <item row="3" column="1">
         <widget class="KColorButton" name="customMenubarsColor">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -2855,7 +2865,7 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
+       <item row="4" column="1">
         <widget class="QCheckBox" name="shadeMenubarOnlyWhenActive">
          <property name="whatsThis">
           <string>Defines whether the background coloration should be applied to all menubars, or just those in active windows.</string>
@@ -2865,14 +2875,14 @@
          </property>
         </widget>
        </item>
-       <item row="4" column="0">
+       <item row="5" column="0">
         <widget class="QLabel" name="label_58">
          <property name="text">
           <string>Menubar text:</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="1">
+       <item row="5" column="1">
         <widget class="QCheckBox" name="customMenuTextColor">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -2888,7 +2898,7 @@
          </property>
         </widget>
        </item>
-       <item row="5" column="1">
+       <item row="6" column="1">
         <widget class="KColorButton" name="customMenuNormTextColor">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -2904,7 +2914,7 @@
          </property>
         </widget>
        </item>
-       <item row="6" column="1">
+       <item row="7" column="1">
         <widget class="KColorButton" name="customMenuSelTextColor">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -2920,21 +2930,21 @@
          </property>
         </widget>
        </item>
-       <item row="7" column="0">
+       <item row="8" column="0">
         <widget class="QLabel" name="label_59">
          <property name="text">
           <string>Menubar items:</string>
          </property>
         </widget>
        </item>
-       <item row="7" column="1">
+       <item row="8" column="1">
         <widget class="QComboBox" name="menuitemAppearance">
          <property name="whatsThis">
           <string>Defines the gradient to be applied to selected menubar items.</string>
          </property>
         </widget>
        </item>
-       <item row="8" column="1">
+       <item row="9" column="1">
         <widget class="QCheckBox" name="menubarMouseOver">
          <property name="whatsThis">
           <string>If enabled, menubar items will have their background gradient applied when the mouse hovers over them.</string>
@@ -2944,7 +2954,7 @@
          </property>
         </widget>
        </item>
-       <item row="9" column="1">
+       <item row="10" column="1">
         <widget class="QCheckBox" name="colorMenubarMouseOver">
          <property name="whatsThis">
           <string>If enabled, when the mouse hovers over a menubar item (and 'Enable mouse-over' is enabled) then it will also be colored, otherwise it wll use a shade of the background color.</string>
@@ -2954,7 +2964,7 @@
          </property>
         </widget>
        </item>
-       <item row="10" column="1">
+       <item row="11" column="1">
         <widget class="QCheckBox" name="roundMbTopOnly">
          <property name="whatsThis">
           <string>If enabled, only the top (and not bottom) of selected menubar items will be rounded.</string>
